# VSUSCRUMS

./: .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260524_0001_initial_schema.py  20260524_0002_model_config_versions.py
backend/app/: main.py
backend/app/api/routes/: projects.py
backend/app/core/: config.py
backend/app/db/models/: __init__.py  base.py  model_config.py  project.py  sprint.py  task.py  upload.py  user.py
backend/app/repositories/: model_config.py  project.py  upload.py
backend/app/schemas/: model_config.py  project.py  upload.py
backend/app/services/: analytics.py  excel_import.py  model_config.py
backend/templates/: scrummetrics_import_template.xlsx  scrums_input_template.xlsx
outputs/: SCRUMS.xlsx
src/app/: App.tsx  routes.tsx
src/app/api/: backend.ts
src/app/components/: LoginScreen.tsx  RootLayout.tsx
src/app/components/ui/: command.tsx  sidebar.tsx
src/app/context/: AuthContext.tsx  ProjectsContext.tsx
src/app/model/: formulaWorkbench.ts  projectAnalytics.ts  useProjectAnalytics.ts
src/app/pages/: Dashboard.tsx  DataUpload.tsx  MathematicalModel.tsx  Recommendations.tsx  SprintAnalysis.tsx  TaskDetails.tsx  TeamAnalysis.tsx
