[project]
name = "scrummetrics-backend"
version = "0.1.0"
description = "Backend for ScrumMetrics analytics platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "sqlalchemy==2.0.43",
  "psycopg[binary]==3.2.9",
  "alembic==1.16.4",
  "pydantic-settings==2.10.1",
  "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.4.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
